H vs C added, Dfs for red made, Working fine git log

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,19 @@
-{% extends "base.html" %}
-{% block content %}
-<h1>OOPS! This is not what you are looking for. Try Again.</h1>
+<<!DOCTYPE html>
+<html>
+<head>
+	<title>Lost??</title>
+	<style>html { 
+  background: url(404.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+	</style>
+</head>
+<body>
+<br><br><br><br><br>
 <h2>Click <a href="/">Here</a> to go to home page</h2>
+</body>
+</html>
 
-{%endblock%}
