Player vs Player added, Mouse option replacing form ajax| Beautifying left

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script type="text/javascript" src="{{url_for('static',filename='js/materialize.js')}}"></script>
 -->
-<div align="right">Made by Abhinav Rai</div>
+<div align="right"><h2>Made by Abhinav Rai</h2></div>
 </body>
 </html>
