--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
+<div align="center">
+<a href="/c_vs_c"><button>Code Vs Code</button></a><br><br>
+<a href="/h_vs_c"><button>Human Vs Code</button></a><br><br>
+<a href="/game3"><button>Human Vs Human</button></a>
 
-<a href="/c_vs_c"><button>Code Vs Code</button></a><br>
-<a href="/h_vs_c"><button>Human Vs Code</button></a>
-
-
+</div>
 
 
 {%endblock%}
