--- a/templates/game2.html
+++ b/templates/game2.html
@@ -184,7 +184,8 @@ function load(){
 </head>
 <body onclick="show_coordinate(event)">
 <img src="hex_bg.gif" id="back">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script type=text/javascript src="{{
+  url_for('static', filename='jquery.js') }}"></script>
 <script>
 var turn=0;
 if ("{{playf}}"=="N")
@@ -206,7 +207,7 @@ function load(){
 				console.log("red"+answer.output);
 				turn=0;
 				
-				
+				document.getElementById(answer.output).src = "hex_r.gif";
 				var flag=0;
 			if(answer.wrong_selected==1)
 					{alert("Red Overwrote and thus lost. Blue is winner");flag=1;;
@@ -224,7 +225,7 @@ function load(){
 					//*************************DO SOMETHING SOMETHINg :P
 
 					}
-				document.getElementById(answer.output).src = "hex_r.gif";
+				
 				if(flag!=1)
 					setTimeout(function(){ load(); }, 1000);
 			},
@@ -259,7 +260,7 @@ function bar(k){
 				var flag=0;
 				console.log("Blue"+answer.output);
 				turn=1;
-				
+				document.getElementById(answer.output).src ="hex_b.gif";
 			if(answer.wrong_selected==1)
 					{alert("Blue Overwrote and thus lost. Red is winner");flag=1;
 					}
@@ -272,7 +273,7 @@ function bar(k){
 						alert("Blue WON!!");
 					flag=1;
 					}
-					document.getElementById(answer.output).src = "hex_b.gif";
+					
 					$("form").unbind('submit');
 					if(flag!=1)
 						load();
