--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <center>
-<h2>Mahabharata</h2></center><hr><br>
+<h2>Mahabharata</h2></center>
+<hr><br>
 {% block content %}{% endblock %}
 <br><br>
 <strong><u>
