--- a/templates/game.html
+++ b/templates/game.html
@@ -8,6 +8,11 @@
 <img src="hex_bg.gif" id="back">
 <script type=text/javascript src="{{
   url_for('static', filename='jquery.js') }}"></script>
+  <div align="center" id="player">
+<audio controls>
+  <source src="lean.mp3" type="audio/mpeg" align="center"><br>
+Your browser does not support the audio element.
+</audio>
 <script>
 function show_coordinate(event)
 {
