--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 <div align="center">
+<div align="center" id="player">
+<audio controls autoplay>
+  <source src="nimble.mp3" type="audio/mpeg" align="center">
+Your browser does not support the audio element.
+</audio>
+</div>
+<br>
 <a href="/c_vs_c"><button>Code Vs Code</button></a><br><br>
 <a href="/h_vs_c"><button>Human Vs Code</button></a><br><br>
 <a href="/game3"><button>Human Vs Human</button></a>
+<div align="center">
+<br>
+<img src="mahabharata.jpg" height="50%" width="50%"></div>
 
 </div>
 
